# rmon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs
.claude/agents/: rust-code-reviewer.md
.claude/skills/add-collector/: SKILL.md
.claude/skills/push-and-watch-ci/: SKILL.md
.claude/skills/rust-phase-gate/: SKILL.md
.claude/skills/tui-smoke-test/: SKILL.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  main.rs
src/alert/: evaluator.rs  mod.rs
src/collector/: cgroup.rs  connections.rs  container.rs  cpu.rs  disk.rs  gpu.rs  gpu_ioreport.rs  memory.rs  mod.rs  network.rs  process.rs  sensors.rs  system.rs
src/collector/platform/: ioreport.rs  linux.rs  macos.rs  mod.rs
src/export/: mod.rs
src/state/: history.rs  mod.rs  snapshot.rs
src/ui/: format.rs  mod.rs  state.rs  theme.rs
src/ui/widgets/: alerts.rs  container.rs  cpu.rs  disk.rs  gpu.rs  help.rs  memory.rs  mod.rs  network.rs  process.rs  sensors.rs
