[package]
name = "resource-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
bollard = "0.20.2"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
futures-util = "0.3.32"
libc = "0.2.186"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.52.1", features = ["net", "rt", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# IOReport bindings on macOS need the CoreFoundation Rust wrappers; nothing
# on Linux references them, so scope to the target.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

